Re-import with z-index fix

--- a/src/css/presidential-employment-stimulus.webflow.css
+++ b/src/css/presidential-employment-stimulus.webflow.css
@@ -356,9 +356,15 @@ p {
 }
 
 .bar-chart__row:hover {
+  z-index: 1;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#f5f5f5));
   background-image: linear-gradient(180deg, #f5f5f5, #f5f5f5);
   color: #000;
+}
+
+.bar-chart__row_label {
+  position: relative;
+  z-index: 1;
 }
 
 .bar-chart__row_bar {
